Fixing more challenging cubic polynomial support